--- a/style.css
+++ b/style.css
@@ -38,6 +38,12 @@ button:hover {
 	cursor: pointer;
 }
 
+button:disabled {
+	background-color: lightgray;
+	color: var(--darkBlue);
+	box-shadow: inset 0 0 5px #000000;
+}
+
 .smallerButton {
 	font-size: 18px;
 }
